Order in file structure

--- a/views/partials/_examinations/_addNew.hbs
+++ b/views/partials/_examinations/_addNew.hbs
@@ -58,4 +58,4 @@
     <script src="/app/examinations-addNew.js"></script>
 {{/cache}}
 
-{{> _values-createNew }}
+{{> _examinations/_values-createNew }}
