--- a/views/measurements.hbs
+++ b/views/measurements.hbs
@@ -1,14 +1,14 @@
 <div class="d-flex flex-row justify-content-between align-items-end border-bottom mb-2">
     <h4 class="">Pomiary</h4>
     <nav class="d-flex">
-        <button id="btn-add" class="btn btn-sm btn-flat shadow-none rounded-pill px-2 px-sm-3" aria-haspopup="true"
-            aria-expanded="false">
+        <a id="btn-filter" class="btn btn-sm btn-flat shadow-none rounded-pill px-2 px-sm-3" aria-haspopup="true"
+            aria-expanded="false" data-toggle="modal" href="#filterMeasurements">
             <svg viewBox="0 0 16 16" class="mr-0 mr-sm-1 bi bi-filter" fill="currentColor">
                 <path fill-rule="evenodd"
                     d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z" />
             </svg>
             <span class="d-none d-sm-inline">Filtruj</span>
-        </button>
+        </a>
         <a id="btn-add" class="btn btn-sm btn-secondary rounded-pill" aria-haspopup="true" aria-expanded="false"
             data-toggle="modal" href="#addMeasurement">
             <svg viewBox="0 0 16 16" class="mr-1 bi bi-plus-square" fill="currentColor">
@@ -23,17 +23,50 @@
 </div>
 
 <!-- Header of measurement table -->
-<div class="row bg-dark white-text p-2">
-    <div class="col-2">
+<div class="row bg-dark white-text p-2 sticky-top">
+    <div class="col-6 col-sm-4">
         Data
     </div>
-    <div class="col">
+    <div class="col-6 col-sm-8">
         Nazwa badania
-    </div>
-    <div class="col-3">
-        Wynik
     </div>
 </div>
 <!-- /Header of measurement table -->
 
-{{> _measurements-add }}
+<div id="results">
+    {{set date 0}}
+    {{#each lists}}
+        <div class="result-item">
+            {{#if (neq (get date) (formatDate createdAt 'DD-MM-YYYY'))}}
+                {{set date (formatDate createdAt 'DD-MM-YYYY')}}
+                <div class="row px-2">
+                    <div class="col">
+                        <strong>{{get date}}</strong>
+                    </div>
+                </div>
+            {{/if}}
+            <div class="row px-2">
+                <div class="col-6 col-sm-4">
+                    {{formatDate createdAt '@ H:mm'}}
+                </div>
+                <div class="col-6 col-sm-8">
+                    {{examination.name}}
+                </div>
+            </div>
+            {{#each values}}
+                <div class="row px-2">
+                    <div class="col-6">
+                        {{value.name}}
+                    </div>
+                    <div class="col-6 text-right">
+                        {{result}}{{value.unit}}
+                    </div>
+                </div>
+            {{/each}}
+        </div>
+    {{/each}}
+</div>
+
+{{> _measurements/_pagination }}
+{{> _measurements/_add }}
+{{> _measurements/_filter }}
