Remove 'sticky-top' class from table header

--- a/views/measurements.hbs
+++ b/views/measurements.hbs
@@ -23,7 +23,7 @@
 </div>
 
 <!-- Header of measurement table -->
-<div class="row bg-dark white-text p-2 sticky-top">
+<div class="row bg-dark white-text p-2">
     <div class="col-6 col-sm-4">
         Data
     </div>
