correct template filename

--- a/views/examinations.hbs
+++ b/views/examinations.hbs
@@ -215,5 +215,5 @@
 	<script src="/app/examinations.js"></script>
 {{/cache}}
 
-{{> _examinations/addNew}}
-{{> _examinations/createGroup}}
+{{> _examinations/_addNew}}
+{{> _examinations/_createGroup}}
