change nav class

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar sticky-top shadow-none p-0">
+<nav class="navbar fixed-top shadow-none p-0">
 
     <div class="d-flex flex-row col-12 offset-md-4 col-md-8 offset-lg-3 col-lg-9 navbar-dark unique-color shadow py-1">
 
