Remove all dependencies and replace them with bundle files

--- a/views/examinations.hbs
+++ b/views/examinations.hbs
@@ -211,8 +211,8 @@
 </div>
 
 {{#cache}}
-	<script src="/external/mousetrap.min.js"></script>
-	<script src="/app/examinations.js"></script>
+	{{!-- <script src="/external/mousetrap.min.js"></script> --}}
+	<script src="/examinations.bundle.js"></script>
 {{/cache}}
 
 {{> _examinations/_addNew}}
