--- a/views/partials/_examinations/_addNew.hbs
+++ b/views/partials/_examinations/_addNew.hbs
@@ -53,9 +53,9 @@
     </div>
 </div>
 
-{{#cache}}
+{{!-- {{#cache}}
     <script src="/app/class-selectFetch.js"></script>
     <script src="/app/examinations-addNew.js"></script>
-{{/cache}}
+{{/cache}} --}}
 
 {{> _examinations/_values-createNew }}
