--- a/views/partials/_examinations/_createGroup.hbs
+++ b/views/partials/_examinations/_createGroup.hbs
@@ -36,6 +36,6 @@
     </div>
 </div>
 
-{{#cache}}
+{{!-- {{#cache}}
     <script src="/app/examinations-createGroup.js"></script>
-{{/cache}}
+{{/cache}} --}}
