--- a/views/partials/_examinations/_values-createNew.hbs
+++ b/views/partials/_examinations/_values-createNew.hbs
@@ -51,6 +51,6 @@
     </div>
 </div>
 
-{{#cache}}
+{{!-- {{#cache}}
     <script src="/app/values-createNew.js"></script>
-{{/cache}}
+{{/cache}} --}}
