--- a/views/partials/_measurements/_add.hbs
+++ b/views/partials/_measurements/_add.hbs
@@ -53,7 +53,11 @@
                         </div>
                     </div>
                     <label class="mt-3">Wynik badania</label>
-                    <div id="results" class="py-3 border-top"></div>
+                    <div id="results" class="d-flex flex-column w-100 py-3 border-top border-bottom mb-3"></div>
+                    <div class="form-group">
+                        <label for="description">Adnotacje</label>
+                        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary rounded-pill" data-dismiss="modal">Anuluj</button>
@@ -66,8 +70,3 @@
         </div>
     </div>
 </div>
-
-{{#cache}}
-    <script src="/app/class-selectFetch.js"></script>
-    <script src="/app/measurements-addNew.js"></script>
-{{/cache}}
