--- a/views/partials/_measurements/_filter.hbs
+++ b/views/partials/_measurements/_filter.hbs
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-6 form-group">
                             <label for="date">Od</label>
-                            <input class="form-control" type="date" name="date-from" id="date-from" autofocus value="">
+                            <input class="form-control" type="date" name="date-from" id="date-from" value="">
                         </div>
                         <div class="col-6 form-group">
                             <label for="time">Do</label>
@@ -22,10 +22,11 @@
                     </div>
                     <div class="form-group">
                         <label for="name">Badanie</label>
-                        <input class="form-control" type="text" name="name" id="name" autofocus>
-                        <div class="invalid-feedback">
-                            Nazwa grupy jest wymaganym polem.
-                        </div>
+                        <input class="form-control" type="text" name="examination" id="examination">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Wyniki</label>
+                        <input class="form-control" type="text" name="results" id="results">
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -39,7 +40,3 @@
         </div>
     </div>
 </div>
-
-{{#cache}}
-    <script src="/app/measurements-filter.js"></script>
-{{/cache}}
