add script to bundled entry point

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -18,3 +18,7 @@
     <h3>{{{greetings}}} {{name}}</h3>
     <p></p>
 </div>
+
+{{#cache}}
+    <script src="/dashboard.bundle.js"></script>
+{{/cache}}
