--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,19 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="/favicon.png" />
+        <link rel="shortcut icon" href="/assets/favicon.png" />
         <title>Health Diary</title>
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <link href="/css/bootstrap.css" rel="stylesheet">
-        <link href="/css/mdb.css" rel="stylesheet">
+        <link href="/css/main.css" rel="stylesheet">
 
-        <link href="/css/progressbar.css" rel="stylesheet">
-        <link href="/css/style.css" rel="stylesheet">
-
-        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+        <!-- TODO: poszukać rozwiązania dla Handlebars -->
+        <script src="/vendor/jquery/jquery.js"></script>
+        {{!-- <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script> --}}
     </head>
 
     <body class="d-flex flex-column h-100 bg-light">
@@ -35,7 +33,11 @@
             </div>
         </div>
 
-        <script src="/main.bundle.js"></script>
+        <script src="/vendor/popper/popper.js"></script>
+        <script src="/vendor/bootstrap/bootstrap.js"></script>
+        <script src="/vendor/mdbootstrap/mdb.js"></script>
+
+        <script src="/app.bundle.js"></script>
 
         {{{flushCache}}}
     </body>
