--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,15 +1,15 @@
 <nav aria-label="Page navigation">
     <ul class="pagination pg-blue justify-content-center">
-        <li class="page-item disabled">
-            <a class="page-link">
+        <li class="page-item {{#if (eq currentPage 0)}}disabled{{/if}}">
+            <a id="page-changer" data-page="0" class="page-link">
                 <svg viewBox="0 0 16 16" class="bi bi-chevron-bar-left" fill="currentColor">
                     <path fill-rule="evenodd"
                         d="M11.854 3.646a.5.5 0 0 1 0 .708L8.207 8l3.647 3.646a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708 0zM4.5 1a.5.5 0 0 0-.5.5v13a.5.5 0 0 0 1 0v-13a.5.5 0 0 0-.5-.5z" />
                 </svg>
             </a>
         </li>
-        <li class="page-item disabled">
-            <a class="page-link" aria-label="Previous">
+        <li class="page-item {{#if (eq currentPage 0)}}disabled{{/if}}">
+            <a id="page-changer" data-page="{{sub currentPage 1}}" class="page-link" aria-label="Previous">
                 <span aria-hidden="true">
                     <svg viewBox="0 0 16 16" class="bi bi-chevron-double-left" fill="currentColor">
                         <path fill-rule="evenodd"
@@ -21,13 +21,15 @@
                 <span class="sr-only">Poprzednia</span>
             </a>
         </li>
-        <li class="page-item active"><a class="page-link">1</a></li>
-        <li class="page-item"><a class="page-link">2</a></li>
-        <li class="page-item"><a class="page-link">3</a></li>
-        <li class="page-item"><a class="page-link">4</a></li>
-        <li class="page-item"><a class="page-link">5</a></li>
-        <li class="page-item">
-            <a class="page-link" aria-label="Next">
+        {{set "begin" (limitMin (sub currentPage 2) 0)}}
+        {{set "end" (limitMax (add currentPage 2) totalPages)}}
+        {{#loop "begin" "end"}}
+            <li class="page-item {{#if (eq @index currentPage)}}active{{/if}}">
+                <a id="page-changer" data-page="{{@index}}" class="page-link">{{add @index 1}}</a>
+            </li>
+        {{/loop}}
+        <li class="page-item {{#if (eq currentPage totalPages)}}disabled{{/if}}">
+            <a id="page-changer" data-page="{{add currentPage 1}}" class="page-link" aria-label="Next">
                 <span aria-hidden="true">
                     <svg viewBox="0 0 16 16" class="bi bi-chevron-double-right" fill="currentColor">
                         <path fill-rule="evenodd"
@@ -39,8 +41,8 @@
                 <span class="sr-only">Następna</span>
             </a>
         </li>
-        <li class="page-item">
-            <a class="page-link">
+        <li class="page-item {{#if (eq currentPage totalPages)}}disabled{{/if}}">
+            <a id="page-changer" data-page="{{totalPages}}" class="page-link">
                 <svg viewBox="0 0 16 16" class="bi bi-chevron-bar-right" fill="currentColor">
                     <path fill-rule="evenodd"
                         d="M4.146 3.646a.5.5 0 0 0 0 .708L7.793 8l-3.647 3.646a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708 0zM11.5 1a.5.5 0 0 1 .5.5v13a.5.5 0 0 1-1 0v-13a.5.5 0 0 1 .5-.5z" />
