--- a/views/partials/_measurements/_filter.hbs
+++ b/views/partials/_measurements/_filter.hbs
@@ -8,36 +8,25 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form id="createGroup" class="needs-validation" novalidate autocomplete="off">
-                <div class="col-6 form-group">
-                    <label for="date">Wyników na stronę: </label>
-                    <select class="form-control col-9 col-sm-10" id="limit" name="limit">
-                        <option value="0">wszystkie wyniki</option>
-                        <option value="10">10 wyników</option>
-                        <option value="20" selected>20 wyników</option>
-                        <option value="50">50 wyników</option>
-                        <option value="100">100 wyników</option>
-                    </select>
-
-                </div>
+            <form id="filter-form" class="needs-validation" novalidate autocomplete="off">
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-6 form-group">
-                            <label for="date">Od</label>
-                            <input class="form-control" type="date" name="date-from" id="date-from" value="">
+                            <label for="fiter-date-from">Od</label>
+                            <input class="form-control" type="date" name="date-from" id="fiter-date-from" value="">
                         </div>
                         <div class="col-6 form-group">
-                            <label for="time">Do</label>
-                            <input class="form-control" type="date" name="date-to" id="date-to" value="">
+                            <label for="fiter-date-to">Do</label>
+                            <input class="form-control" type="date" name="date-to" id="fiter-date-to" value="">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="name">Badanie</label>
-                        <input class="form-control" type="text" name="examination" id="examination">
+                        <label for="fiter-examination">Badanie</label>
+                        <input class="form-control" type="text" name="examination" id="fiter-examination">
                     </div>
                     <div class="form-group">
-                        <label for="name">Wyniki</label>
-                        <input class="form-control" type="text" name="results" id="results">
+                        <label for="fiter-results">Wyniki</label>
+                        <input class="form-control" type="text" name="results" id="fiter-results">
                     </div>
                 </div>
                 <div class="modal-footer">
