Update pagination code

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -245,3 +245,7 @@ tr.row-group {
 .number-unit { width:4em; }
 .field-enum,
 .field-sets { width:9em; }
+
+div#measurements-results {
+  margin-bottom:4em;
+}
