--- a/views/measurements.hbs
+++ b/views/measurements.hbs
@@ -39,7 +39,7 @@
     Wczytywanie...
 </div>
 <div id="measurements-results"></div>
-<div id="pagination"></div>
+<div id="paginator" class="fixed-bottom row"></div>
 
 {{> _measurements/_add }}
 {{> _measurements/_filter }}
