--- a/views/partials/_examinations-tab/general.hbs
+++ b/views/partials/_examinations-tab/general.hbs
@@ -10,7 +10,11 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="group">Przypisz do grupy</label>
+        <div class="d-flex flex-row justify-content-between align-items-center">
+            <label for="group">Przypisz do grupy</label>
+            <a class="btn btn-sm btn-primary rounded-pill shadow-none" href="#add-group" data-toggle="modal">Utwórz
+                grupę</a>
+        </div>
         <div id="groupsFetching" class="spinner-border spinner-border-sm" role="status">
             <span class="sr-only">Wczytywanie...</span>
         </div>
