--- a/views/partials/_examinations/_createGroup.hbs
+++ b/views/partials/_examinations/_createGroup.hbs
@@ -25,8 +25,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
-                    <button type="submit" class="btn btn-primary">Utwórz</button>
+                    <button type="button" class="btn btn-secondary rounded-pill" data-dismiss="modal">Anuluj</button>
+                    <button type="submit" class="btn btn-primary rounded-pill">Utwórz</button>
                 </div>
             </form>
             <div id="formSend" class="progress bg-secondary custom-progress" role="progressbar">
@@ -35,7 +35,3 @@
         </div>
     </div>
 </div>
-
-{{!-- {{#cache}}
-    <script src="/app/examinations-createGroup.js"></script>
-{{/cache}} --}}
