replace dropdown to button, and move "Create group" to dialog "Add new examination"

--- a/views/examinations.hbs
+++ b/views/examinations.hbs
@@ -2,18 +2,14 @@
 	<h4 class="">Lista badań</h4>
 	<nav>
 		<div class="dropdown">
-			<button id="btn-add" class="btn btn-sm btn-secondary rounded-pill" data-toggle="dropdown"
-				aria-haspopup="true" aria-expanded="false">
+			<button id="btn-add" class="btn btn-sm btn-secondary rounded-pill" data-toggle="modal"
+				data-target="#add-examination">
 				<svg viewBox="0 0 16 16" class="mr-1 bi bi-plus" fill="currentColor">
 					<path fill-rule="evenodd"
 						d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
 				</svg>
 				Dodaj...
 			</button>
-			<div class="dropdown-menu dropdown-menu-right">
-				<a class="dropdown-item" href="#add-examination" data-toggle="modal">Nowe badanie</a>
-				<a class="dropdown-item" href="#add-group" data-toggle="modal">Utwórz grupę</a>
-			</div>
 		</div>
 	</nav>
 </div>
