--- a/views/measurements.hbs
+++ b/views/measurements.hbs
@@ -9,7 +9,7 @@
             </svg>
             <span class="d-none d-sm-inline">Filtruj</span>
         </a>
-        <a id="btn-add" class="btn btn-sm btn-secondary rounded-pill" aria-haspopup="true" aria-expanded="false"
+        <a id="btn-add" class="btn btn-sm btn-primary rounded-pill" aria-haspopup="true" aria-expanded="false"
             data-toggle="modal" href="#addMeasurement">
             <svg viewBox="0 0 16 16" class="mr-1 bi bi-plus-square" fill="currentColor">
                 <path fill-rule="evenodd"
@@ -23,23 +23,36 @@
 </div>
 
 <!-- Header of measurement table -->
-<div class="row bg-dark white-text p-2">
+<div class="row bg-primary white-text p-0">
     <div class="col-6 col-sm-4">
-        Data
+        <button type="button" class="btn btn-flat shadow-none px-1 py-1 white-text">
+            Data
+            <svg viewBox="0 0 16 16" class="ml-1 bi bi-sort-numeric-down-alt" fill="currentColor">
+                <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z" />
+                <path fill-rule="evenodd"
+                    d="M6.354 11.146a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L4 12.793l1.646-1.647a.5.5 0 0 1 .708 0z" />
+                <path
+                    d="M9.598 5.82c.054.621.625 1.278 1.761 1.278 1.422 0 2.145-.98 2.145-2.848 0-2.05-.973-2.688-2.063-2.688-1.125 0-1.972.688-1.972 1.836 0 1.145.808 1.758 1.719 1.758.69 0 1.113-.351 1.261-.742h.059c.031 1.027-.309 1.856-1.133 1.856-.43 0-.715-.227-.773-.45H9.598zm2.757-2.43c0 .637-.43.973-.933.973-.516 0-.934-.34-.934-.98 0-.625.407-1 .926-1 .543 0 .941.375.941 1.008zM12.438 14V8.668H11.39l-1.262.906v.969l1.21-.86h.052V14h1.046z" />
+            </svg>
+        </button>
     </div>
-    <div class="col-6 col-sm-8">
-        Nazwa badania
+    <div class="col-6 col-sm-8 pl-1">
+        <button type="button" class="btn btn-flat shadow-none px-1 py-1 white-text">
+            Nazwa badania
+        </button>
     </div>
 </div>
 <!-- /Header of measurement table -->
 
 
-<div id="resultsFetch" class="text-center my-3" role="status">
+<div id="measurements-fetch" class="text-center my-3" role="status">
     <span class="spinner-border mr-2"></span>
     Wczytywanie...
 </div>
-<div id="measurements-results"></div>
-<div id="paginator" class="fixed-bottom row"></div>
+<div id="measurements-results" class="mx-0 d-flex flex-column"></div>
+<div class="paginator-spacer"></div>
+
+<div id="paginator" class="paginator-component fixed-bottom"></div>
 
 {{> _measurements/_add }}
 {{> _measurements/_filter }}
