--- a/views/partials/_examinations-tab/values.hbs
+++ b/views/partials/_examinations-tab/values.hbs
@@ -15,24 +15,7 @@
     </div>
     <div id="values-feedback" class="alert alert-danger py-2 custom-feedback">Brak definicji wartości określających
         badanie.</div>
-    <div id="values-list">
-        <!-- list template -->
-        <div id="template-newValueEntry" class="d-flex flex-row align-items-center justify-content-between small px-1">
-            <input type="hidden" id="values" name="values">
-            <div id="valueDef"></div>
-            <div>
-                <button id="btn-deleteValue" type="button" class="btn btn-flat red-text shadow-none p-0 m-0">
-                    <svg viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor">
-                        <path
-                            d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                        <path fill-rule="evenodd"
-                            d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                    </svg>
-                </button>
-            </div>
-        </div>
-        <!-- /list template -->
-    </div>
+    <div id="values-list"></div>
     <div class="form-group d-flex flex-row justify-content-end border-top">
         <a href="#addValue" class="btn btn-sm btn-primary rounded-pill" data-toggle="modal">
             <svg viewBox="0 0 16 16" class="mr-1 bi bi-plus-circle" fill="currentColor">
