--- a/views/partials/_examinations/_addNew.hbs
+++ b/views/partials/_examinations/_addNew.hbs
@@ -53,9 +53,5 @@
     </div>
 </div>
 
-{{!-- {{#cache}}
-    <script src="/app/class-selectFetch.js"></script>
-    <script src="/app/examinations-addNew.js"></script>
-{{/cache}} --}}
-
+{{> _examinations/_createGroup}}
 {{> _examinations/_values-createNew }}
