Continued structuring of files and directories. Updating paths connecting to the API. Minor modifications.

--- a/src/js/pages/examinations/modals/newExamination/templates/modal.hbs
+++ b/src/js/pages/examinations/modals/newExamination/templates/modal.hbs
@@ -34,9 +34,9 @@
                 <div class="modal-body">
 
                     <div class="tab-content" id="tabContent">
-                        {{> _examinations-tab/general}}
-                        {{> _examinations-tab/values}}
-                        {{> _examinations-tab/norms}}
+                        {{> ./_tabs/general}}
+                        {{> ./_tabs/values}}
+                        {{> ./_tabs/norms}}
                     </div>
                 </div>
 
@@ -52,5 +52,3 @@
         </div>
     </div>
 </div>
-
-{{> _examinations/_values-createNew }}
