Code refactoring for Minix library improvements

--- a/views/examinations.hbs
+++ b/views/examinations.hbs
@@ -16,7 +16,7 @@
 	<!-- Header of examination table -->
 	<div class="row d-flex flex-row justify-content-between align-items-center bg-primary white-text p-0">
 		<div>
-			<button type="button" class="btn btn-primary px-2 py-1 mr-0 white-text" id="listOptionButton"
+			<button type="button" class="btn btn-primary px-2 py-1 mr-0 white-text" id="btn-listOption"
 				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<svg viewBox="0 0 16 16" class="bi bi-three-dots-vertical" fill="currentColor">
 					<path fill-rule="evenodd"
@@ -39,60 +39,3 @@
 	</div>
 	<div id="examinationTable" class="d-flex flex-column w-100 p-0 border-bottom"></div>
 </form>
-
-<div class="modal fade" id="modal-noSelection" tabindex="-1" role="dialog" aria-labelledby="noSelection"
-	aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">
-					<svg viewBox="0 0 16 16" class="mr-1 bi bi-info-circle" fill="currentColor">
-						<path fill-rule="evenodd"
-							d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-						<path
-							d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z" />
-						<circle cx="8" cy="4.5" r="1" />
-					</svg>
-					<strong>Nie ma wybranych elementów</strong>
-				</h5>
-			</div>
-			<div class="modal-body text-center">
-				<p>Aby wykonać operację, konieczne jest wybranie przynajmniej jednego elementu z listy.</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-red rounded-pill" data-dismiss="modal">Rozumiem</button>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="modal fade" id="modal-confirmGroupDelete" tabindex="-1" role="dialog" aria-labelledby="deleteGroup"
-	aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">
-					<svg viewBox="0 0 17 16" class="bi bi-exclamation-triangle" fill="currentColor">
-						<path fill-rule="evenodd"
-							d="M7.938 2.016a.146.146 0 0 0-.054.057L1.027 13.74a.176.176 0 0 0-.002.183c.016.03.037.05.054.06.015.01.034.017.066.017h13.713a.12.12 0 0 0 .066-.017.163.163 0 0 0 .055-.06.176.176 0 0 0-.003-.183L8.12 2.073a.146.146 0 0 0-.054-.057A.13.13 0 0 0 8.002 2a.13.13 0 0 0-.064.016zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z" />
-						<path
-							d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z" />
-					</svg>
-					<strong>Usunięcie grupy</strong>
-				</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body text-center">
-				<p>Usuwając grupę usuniesz również badania do niej należące.</p>
-				<p><strong>Czy napewno chcesz wykonać tą operację?</strong></p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-dark rounded-pill" data-dismiss="modal">Zrezygnuj</button>
-				<button id="btn-confirmGroupDelete" type="button" class="btn btn-red rounded-pill"
-					data-dismiss="modal">Usuń</button>
-			</div>
-		</div>
-	</div>
-</div>
