Resignation from the 'mdbootstrap' library and correction of templates.

--- a/src/js/pages/examinations/modals/createNewValue/_modal.hbs
+++ b/src/js/pages/examinations/modals/createNewValue/_modal.hbs
@@ -43,8 +43,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary rounded-pill" data-dismiss="modal">Anuluj</button>
-                    <button type="submit" class="btn btn-success rounded-pill">Dodaj</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
+                    <button type="submit" class="btn btn-success">Dodaj</button>
                 </div>
             </form>
         </div>
