--- a/src/js/pages/examinations/modals/newExamination/templates/_tabs/norms.hbs
+++ b/src/js/pages/examinations/modals/newExamination/templates/_tabs/norms.hbs
@@ -1,3 +1,5 @@
 <div class="tab-pane fade" id="norms-tab" role="tabpanel" aria-labelledby="norms-tab">
-    <p>polip</p>
+    <div class="alert alert-info">
+        <p>Zakładka niezaimplementowana.</p>
+    </div>
 </div>
