--- a/src/js/pages/examinations/modals/createGroup/_modal.hbs
+++ b/src/js/pages/examinations/modals/createGroup/_modal.hbs
@@ -25,8 +25,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary rounded-pill" data-dismiss="modal">Anuluj</button>
-                    <button type="submit" class="btn btn-primary rounded-pill">Utwórz</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
+                    <button type="submit" class="btn btn-primary">Utwórz</button>
                 </div>
             </form>
             <div id="formSend" class="progress bg-secondary custom-progress" role="progressbar">
