--- a/src/js/pages/examinations/modals/newExamination/_modal.hbs
+++ b/src/js/pages/examinations/modals/newExamination/_modal.hbs
@@ -9,7 +9,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <ul class="nav nav-tabs mt-2 mb-0 mdop" id="examinationTab" role="tablist">
+                <ul class="nav nav-tabs mt-2 mb-0 border-0" id="examinationTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link active" href="#general-tab" id="tab-general" data-toggle="tab" role="tab"
                             aria-controls="general" aria-selected="true">
@@ -41,8 +41,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary rounded-pill" data-dismiss="modal">Anuluj</button>
-                    <button type="submit" class="btn btn-success rounded-pill">Zapisz</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
+                    <button type="submit" class="btn btn-success">Zapisz</button>
                 </div>
             </form>
             <div id="formSend" class="progress bg-secondary custom-progress" role="progressbar">
