--- a/src/js/pages/examinations/modals/newExamination/templates/_tabs/general.hbs
+++ b/src/js/pages/examinations/modals/newExamination/templates/_tabs/general.hbs
@@ -12,7 +12,7 @@
     <div class="form-group">
         <div class="d-flex flex-row justify-content-between align-items-center">
             <label for="group">Przypisz do grupy</label>
-            <a class="btn btn-sm btn-primary rounded-pill shadow-none" href="#add-group" data-toggle="modal">Utwórz
+            <a class="btn btn-sm btn-light shadow-none" href="#add-group" data-toggle="modal">Utwórz
                 grupę</a>
         </div>
         <div id="groupsFetching" class="spinner-border spinner-border-sm" role="status">
