--- a/src/js/pages/measurements/modals/addMeasurement/_modal.hbs
+++ b/src/js/pages/measurements/modals/addMeasurement/_modal.hbs
@@ -58,8 +58,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary rounded-pill" data-dismiss="modal">Anuluj</button>
-                    <button type="submit" class="btn btn-primary rounded-pill">Dodaj</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
+                    <button type="submit" class="btn btn-primary">Dodaj</button>
                 </div>
             </form>
             <div id="formSend" class="progress bg-secondary custom-progress" role="progressbar">
