--- a/src/js/pages/login/base.hbs
+++ b/src/js/pages/login/base.hbs
@@ -2,7 +2,7 @@
 	<div class="px-0 col-12 col-sm-10 offset-sm-1 col-lg-6 offset-lg-3">
 
 		<div class="card">
-			<div class="card card-image" style="background-image: url(/assets/sidebar-bg.jpg);">
+			<div class="card card-image" style="background-image: url('/assets/sidebar-bg.jpg');">
 				<div class="text-white text-center py-5 px-4">
 					<div>
 						<h2 class="card-title h1-responsive pt-3 mb-1 border-bottom font-bold">
